--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,19 @@
     "short_name": "Countdown",
     "description": "Приложение для отслеживания времени до окончания экспедиции",
     "start_url": "./",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#1a2980",
     "theme_color": "#1a2980",
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            "src": "./icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "./icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
